test/spec/exception-handling/imports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/exception-handling/imports.wast
;;; ARGS*: --enable-exceptions
(;; STDOUT ;;;
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32_f32(i32:14, f32:42.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_f32(f32:13.000000) =>
called host spectest.print_i32(i32:13) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64_f64(f64:25.000000, f64:53.000000) =>
called host spectest.print_i64(i64:24) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
called host spectest.print_f64(f64:24.000000) =>
out/test/spec/exception-handling/imports.wast:96: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.2.wasm:000001e: error: function type variable out of range: 1 (max 1)
  000001e: error: OnImportFunc callback failed
called host spectest.print_i32(i32:13) =>
out/test/spec/exception-handling/imports.wast:132: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:136: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:141: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:145: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:149: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:153: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:157: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:161: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:165: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:169: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:173: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:177: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:181: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:185: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:189: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:193: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:197: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:201: assert_unlinkable passed:
  error: import signature mismatch
out/test/spec/exception-handling/imports.wast:206: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:210: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind func, not table
out/test/spec/exception-handling/imports.wast:214: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:218: assert_unlinkable passed:
  error: expected import "test.tag" to have kind func, not tag
out/test/spec/exception-handling/imports.wast:222: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind func, not global
out/test/spec/exception-handling/imports.wast:226: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind func, not table
out/test/spec/exception-handling/imports.wast:230: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind func, not memory
out/test/spec/exception-handling/imports.wast:235: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:239: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:243: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:247: assert_unlinkable passed:
  error: signature mismatch in imported tag
out/test/spec/exception-handling/imports.wast:251: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind tag, not func
out/test/spec/exception-handling/imports.wast:285: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:289: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:294: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got i32.
out/test/spec/exception-handling/imports.wast:298: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i32.
out/test/spec/exception-handling/imports.wast:302: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i32.
out/test/spec/exception-handling/imports.wast:306: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:310: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got f32.
out/test/spec/exception-handling/imports.wast:314: assert_unlinkable passed:
  error: type mismatch in imported global, expected i64 but got f32.
out/test/spec/exception-handling/imports.wast:318: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got f32.
out/test/spec/exception-handling/imports.wast:322: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected immutable but got mutable.
out/test/spec/exception-handling/imports.wast:326: assert_unlinkable passed:
  error: type mismatch in imported global, expected i32 but got i64.
out/test/spec/exception-handling/imports.wast:330: assert_unlinkable passed:
  error: type mismatch in imported global, expected f32 but got i64.
out/test/spec/exception-handling/imports.wast:334: assert_unlinkable passed:
  error: type mismatch in imported global, expected f64 but got i64.
out/test/spec/exception-handling/imports.wast:338: assert_unlinkable passed:
  error: mutability mismatch in imported global, expected mutable but got immutable.
out/test/spec/exception-handling/imports.wast:343: assert_unlinkable passed:
  error: expected import "test.func" to have kind global, not func
out/test/spec/exception-handling/imports.wast:347: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind global, not table
out/test/spec/exception-handling/imports.wast:351: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:355: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind global, not func
out/test/spec/exception-handling/imports.wast:359: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind global, not table
out/test/spec/exception-handling/imports.wast:363: assert_unlinkable passed:
  error: expected import "spectest.memory" to have kind global, not memory
out/test/spec/exception-handling/imports.wast:382: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:385: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:386: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:401: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:404: assert_trap passed: uninitialized table element
out/test/spec/exception-handling/imports.wast:405: assert_trap passed: undefined table index
out/test/spec/exception-handling/imports.wast:437: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:441: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:446: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:450: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (20)
out/test/spec/exception-handling/imports.wast:454: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:458: assert_unlinkable passed:
  error: max size (20) larger than declared (18)
out/test/spec/exception-handling/imports.wast:462: assert_unlinkable passed:
  error: actual size (10) smaller than declared (12)
out/test/spec/exception-handling/imports.wast:466: assert_unlinkable passed:
  error: max size (20) larger than declared (15)
out/test/spec/exception-handling/imports.wast:471: assert_unlinkable passed:
  error: expected import "test.func" to have kind table, not func
out/test/spec/exception-handling/imports.wast:475: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind table, not global
out/test/spec/exception-handling/imports.wast:479: assert_unlinkable passed:
  error: expected import "test.memory-2-inf" to have kind table, not memory
out/test/spec/exception-handling/imports.wast:483: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind table, not func
out/test/spec/exception-handling/imports.wast:501: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:512: assert_trap passed: out of bounds memory access: access at 1000000+4 >= max value 65536
out/test/spec/exception-handling/imports.wast:515: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.103.wasm:0000015: error: only one memory block allowed
  0000015: error: OnImportMemory callback failed
out/test/spec/exception-handling/imports.wast:519: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.104.wasm:0000015: error: only one memory block allowed
  0000015: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:523: assert_invalid passed:
  out/test/spec/exception-handling/imports/imports.105.wasm:000000f: error: only one memory block allowed
  000000f: error: OnMemory callback failed
out/test/spec/exception-handling/imports.wast:538: assert_unlinkable passed:
  error: invalid import "test.unknown"
out/test/spec/exception-handling/imports.wast:542: assert_unlinkable passed:
  error: invalid import "spectest.unknown"
out/test/spec/exception-handling/imports.wast:547: assert_unlinkable passed:
  error: actual size (2) smaller than declared (3)
out/test/spec/exception-handling/imports.wast:551: assert_unlinkable passed:
  error: max size (unspecified) larger than declared (3)
out/test/spec/exception-handling/imports.wast:555: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:559: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:564: assert_unlinkable passed:
  error: expected import "test.func-i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:568: assert_unlinkable passed:
  error: expected import "test.global-i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:572: assert_unlinkable passed:
  error: expected import "test.table-10-inf" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:576: assert_unlinkable passed:
  error: expected import "spectest.print_i32" to have kind memory, not func
out/test/spec/exception-handling/imports.wast:580: assert_unlinkable passed:
  error: expected import "spectest.global_i32" to have kind memory, not global
out/test/spec/exception-handling/imports.wast:584: assert_unlinkable passed:
  error: expected import "spectest.table" to have kind memory, not table
out/test/spec/exception-handling/imports.wast:589: assert_unlinkable passed:
  error: actual size (1) smaller than declared (2)
out/test/spec/exception-handling/imports.wast:593: assert_unlinkable passed:
  error: max size (2) larger than declared (1)
out/test/spec/exception-handling/imports.wast:631: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.133.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (func))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:635: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.134.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (global i64))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:639: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.135.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (table 0 funcref))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:643: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.136.wat:1:9: error: imports must occur before all non-import definitions
  (func) (import "" "" (memory 0))
          ^^^^^^
out/test/spec/exception-handling/imports.wast:648: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.137.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (func))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:652: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.138.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (global f32))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:656: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.139.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (table 0 funcref))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:660: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.140.wat:1:29: error: imports must occur before all non-import definitions
  (global i64 (i64.const 0)) (import "" "" (memory 0))
                              ^^^^^^
out/test/spec/exception-handling/imports.wast:665: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.141.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (func))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:669: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.142.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (global i32))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:673: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.143.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (table 0 funcref))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:677: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.144.wat:1:20: error: imports must occur before all non-import definitions
  (table 0 funcref) (import "" "" (memory 0))
                     ^^^^^^
out/test/spec/exception-handling/imports.wast:682: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.145.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (func))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:686: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.146.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (global i32))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:690: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.147.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (table 1 3 funcref))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:694: assert_malformed passed:
  out/test/spec/exception-handling/imports/imports.148.wat:1:13: error: imports must occur before all non-import definitions
  (memory 0) (import "" "" (memory 1 2))
              ^^^^^^
out/test/spec/exception-handling/imports.wast:704: assert_unlinkable passed:
  error: invalid import "not wasm.overloaded"
185/185 tests passed.
;;; STDOUT ;;)
